[tool.poetry]
name = "mlb-nms"
version = "0.1.0"
description = "An easy CLI tool to see which cards can be flipped in MLB the Show 22!"
authors = ["Sam Kasbawala <samarth.kasbawala@uconn.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
tqdm = "^4.64.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mlb-nms = 'mlb_nms.__main__:main'
